--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  --clr-accent: #D72E20;
+  --clr-accent: #d72e20;
   --clr-accent-light: #fae8e6;
 
   --clr-primary-bg: #fafafa;
@@ -17,7 +17,7 @@
   --txt-size-h1: 8rem;
   --txt-size-h2: 2.5rem;
   --txt-size-h3: 1.25rem;
-  --txt-size-p: 1rem
+  --txt-size-p: 1rem;
 }
 
 * {
@@ -38,11 +38,9 @@ section {
   height: 100vh;
   width: 100vw;
   background-color: var(--clr-accent);
-
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   gap: 32px;
-
 }
 
 h1 {
@@ -88,7 +86,7 @@ span {
 }
 
 .wrapper {
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .tooltip {
@@ -99,6 +97,6 @@ span {
   div {
     display: flex;
     flex-direction: column;
-    gap: .5rem;
+    gap: 0.5rem;
   }
 }
